Update to version 2.0.0