@@ -4,20 +4,27 @@ import net.fabricmc.loader.api.FabricLoader;
 import org.objectweb.asm.tree.ClassNode;
 import org.spongepowered.asm.mixin.extensibility.IMixinConfigPlugin;
 import org.spongepowered.asm.mixin.extensibility.IMixinInfo;
-import org.spongepowered.include.com.google.common.collect.ImmutableMap;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
 
-//completely yoinked from Adorn
 public class SubmergedMixinPlugin implements IMixinConfigPlugin {
     private static final Supplier<Boolean> TRUE = () -> true;
 
-    private static final Map<String, Supplier<Boolean>> CONDITIONS = ImmutableMap.of(
-            "me.aidanskye.submerged.mixin.GexpressStartCommandMixin", () -> FabricLoader.getInstance().isModLoaded("gexpress")
+    private static final Map<String, Supplier<Boolean>> CONDITIONS = Map.of(
+            "me.aidanskye.submerged.mixin.GexpressStartCommandMixin", () -> isLoaded("gexpress"),
+            "me.aidanskye.submerged.mixin.GexpressRoleShopMixin", () -> isLoaded("gexpress"),
+            "me.aidanskye.submerged.mixin.PelicanManagerMixin", () -> isLoaded("gexpress"),
+            "me.aidanskye.submerged.mixin.GexpressNightVisionManagerMixin", () -> isLoaded("gexpress"),
+            "me.aidanskye.submerged.mixin.GexpressDevWeaponModelsMixin", () -> isLoaded("gexpress"),
+            "me.aidanskye.submerged.mixin.ThiefTakeItemPacketMixin", () -> isLoaded("stupid-express") && isLoaded("kinswathe")
     );
+
+    public static boolean isLoaded(String id) {
+        return FabricLoader.getInstance().isModLoaded(id);
+    }
 
     @Override
     public boolean shouldApplyMixin(String targetClassName, String mixinClassName) {
